--- a/css/themes/darkblue.css
+++ b/css/themes/darkblue.css
@@ -1,5 +1,5 @@
 :root{
-    --background-body: #001858;
+    --background-body: #00185A;
     --background-header: #001f6e;
     --color-base: #00103a;
     --color-primary: #0048ff;
